application-ingress/helloapp-deployment-service.yaml
# kubectl expose deployment web --type=NodePort --port=8080 --output=yaml --dry-run=client
# kubectl expose deployment web --type=NodePort --port=8080 --output=yaml --dry-run=client

# kubectl apply -f helloapp-deployment-service.yaml
# kubectl get service/web

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web
  name: web
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        name: hello-app
        resources: {}
status: {}
