application-ingress/helloapp2-deployment-service.yaml
# kubectl create deployment web2 --image=gcr.io/google-samples/hello-app:2.0 --output=yaml --dry-run=client
# kubectl expose deployment web2 --port=8080 --type=NodePort --output=yaml --dry-run=client

# kubectl apply -f helloapp2-deployment-service.yaml
# kubectl get service/web2

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web2
  name: web2
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web2
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web2
  name: web2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web2
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:2.0
        name: hello-app
        resources: {}
status: {}
